--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
@@ -91,7 +91,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="dt-responsive table-responsive">
+                                                <div class="dt-responsive table-responsive associatman">
                                                     <table class="table mb-0" id="example23">
 
                                                         <thead>
@@ -181,6 +181,8 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
