--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -32,6 +32,7 @@
     <link rel="stylesheet" type="text/css" href="../../AssociatePanelcss/app-assets/css/pages/card-analytics.min.css">
     <link rel="stylesheet" type="text/css" href="../../AssociatePanelcss/app-assets/css/plugins/tour/tour.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- END: Page CSS-->
     <!-- BEGIN: Custom CSS-->
     <link rel="stylesheet" type="text/css" href="../../../assets/css/style.css">
@@ -248,7 +249,12 @@
                         <h2 class="brand-text mb-0">HM Green City</h2>
                     </a>
                 </li>
-                <li class="nav-item nav-toggle"><a class="nav-link modern-nav-toggle pr-0" data-toggle="collapse"><i class="feather icon-x d-block d-xl-none font-medium-4 primary toggle-icon"></i><i class="toggle-icon feather icon-disc font-medium-4 d-none d-xl-block collapse-toggle-icon primary" data-ticon="icon-disc"></i></a></li>
+                <li class="nav-item nav-toggle">
+                    <a class="nav-link modern-nav-toggle pr-0" data-toggle="collapse">                        
+                        <i class="fa fa-bars dashb" aria-hidden="true"></i>
+                        <i class="toggle-icon feather icon-disc font-medium-4 d-none d-xl-block collapse-toggle-icon primary" data-ticon="icon-disc"></i>
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="shadow-bottom"></div>
@@ -259,7 +265,7 @@
         </div>
     </div>
     @RenderBody();
-    
+
     <!-- End: Customizer-->
     <!-- Buynow Button-->
 
