--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/DistributePayment.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/DistributePayment.cshtml
@@ -71,13 +71,13 @@
                                                                 <th>Sr No.</th>
                                                                 <th>LoginID</th>
                                                                 <th>Name</th>
-                                                                <th>Harmony </th>
+                                                                <th>Binary Income </th>
                                                                 <th>Direct Income</th>
                                                                 <th>Direct Leadership Bonus</th>
                                                                 <th>Gross Amount</th>
                                                                 <th>TDS Amount</th>
                                                                 <th>Processing</th>
-                                                                <th>Net Amount</th>
+                                                                <th>Net Payable Amount</th>
 
                                                             </tr>
                                                         </thead>
