--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/ProductDistributePayment.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/ProductDistributePayment.cshtml
@@ -79,7 +79,7 @@
                                             <th>Gross Amount</th>
                                             <th>TDS Amount</th>
                                             <th>Processing</th>
-                                            <th>Net Amount</th>
+                                            <th>Net Payable Amount</th>
 
                                         </tr>
                                     </thead>
