--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/BoosterLedger.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/BoosterLedger.cshtml
@@ -33,7 +33,7 @@
                                                         <th>Gross Amount</th>
                                                         <th>TDS</th>
                                                         <th>Processing Charge</th>
-                                                        <th>Net Amount</th>
+                                                        <th>Net Payable Amount</th>
                                                         <th>Status</th>
                                                     </tr>
                                                 </thead>
