--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReport.cshtml
@@ -78,7 +78,7 @@
                                                         <th>TDS Amount</th>
                                                         <th>Processing Fee</th>
                                                         <th>Product Wallet</th>
-                                                        <th>NET Amount</th>
+                                                        <th>NET Payable Amount</th>
                                                         <th>Action</th>
                                                     </tr>
                                                 </thead>
