--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/PayoutDetail.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/PayoutDetail.cshtml
@@ -86,7 +86,7 @@
                                                             <th>TDS Amount</th>
                                                             <th>Processing Fee</th>
                                                             <th>Product Wallet</th>
-                                                            <th>Net Amount</th>
+                                                            <th>Net Payable Amount</th>
                                                             <th>Action</th>
                                                         </tr>
                                                     </thead>
