--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/ProductPayoutReceipt.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/ProductPayoutReceipt.cshtml
@@ -127,7 +127,7 @@
                         <tr>
                             <th style="width:10%"></th>
                             <th style="width:60%">Gross Income - Gross Deduction</th>
-                            <th>Net Amount</th>
+                            <th>Net Payable Amount</th>
                         </tr>
                     </thead>
                     <tr>
