--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/ProductPayoutReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/ProductPayoutReport.cshtml
@@ -61,7 +61,7 @@
                             <th>TDS Amount</th>
                             <th>Processing Fee</th>
                             <th>Product Wallet</th>
-                            <th>NET Amount</th>
+                            <th>NET Payable Amount</th>
                             <th>Action</th>
                         </tr>
                     </thead>
