--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DailyIncomeReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DailyIncomeReport.cshtml
@@ -60,8 +60,8 @@
                                         <th>LoginId</th>
                                         <th>Date</th>
                                         <th>Direct Income</th>
-                                        <th>Harmony Income</th>
-                                        <th>Direct Leadership Bonus</th>
+                                        <th>Binary Income</th>
+                                        <th hidden="hidden">Direct Leadership Bonus</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -78,7 +78,7 @@
                                                     <td>@Item.ClosingDate</td>
                                                     <td>@Item.DirectIncome</td>
                                                     <td>@Item.BinaryIncome</td>
-                                                    <td>@Item.LeadershipBonus</td>
+                                                    <td hidden="hidden">@Item.LeadershipBonus</td>
                                                 </tr>
                                                 i++;
                                             }
