--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -142,7 +142,7 @@
 
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="card">
                         <div class="card-header">
                             <h4 class="card-title">Investment Details</h4>
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="card">
                         <div class="card-header">
                             <h4 class="card-title">Total Business</h4>
@@ -234,7 +234,7 @@
                 
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="card">
                         <div class="card-header">
                             <h4 class="card-title">Current Month Business Details</h4>
