--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/DailyIncomeReport1.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/DailyIncomeReport1.cshtml
@@ -44,8 +44,8 @@
 
                                         <th> Name</th>
                                         <th>Direct Income</th>
-                                        <th>Harmony</th>
-                                        <th>Direct Leadership Bonus</th>
+                                        <th>Binary Income</th>
+                                        <th hidden="hidden">Direct Leadership Bonus</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -63,7 +63,7 @@
                                         <td>@Item.DisplayName</td>
                                         <td>@Item.DirectIncome</td>
                                         <td>@Item.BinaryIncome</td>
-                                        <td>@Item.LeadershipBonus</td>
+                                        <td hidden="hidden">@Item.LeadershipBonus</td>
 
                                     </tr>
                                                 i++;
