--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReceipt.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReceipt.cshtml
@@ -70,10 +70,10 @@
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>Harmony Income</td>
+                        <td>Binary Income</td>
                         <td>@Model.BinaryIncome</td>
                     </tr>
-                    <tr>
+                    <tr hidden="hidden">
                         <td>3</td>
                         <td>Direct Leadership Bonus</td>
                         <td>@Model.LeadershipBonus</td>
