--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/ProductPayoutReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/ProductPayoutReport.cshtml
@@ -56,7 +56,7 @@
                             <th>Closing Date</th>
                             <th>Direct Income</th>
                             <th>Harmony</th>
-                            <th>Direct Leadership Bonus</th>
+                            <th hidden="hidden">Direct Leadership Bonus</th>
                             <th>Gross Amount</th>
                             <th>TDS Amount</th>
                             <th>Processing Fee</th>
@@ -81,7 +81,7 @@
                                 <td>@Item.ClosingDate</td>
                                 <td>@Item.DirectIncome</td>
                                 <td>@Item.BinaryIncome</td>
-                                <td>@Item.LeadershipBonus</td>
+                                <td hidden="hidden">@Item.LeadershipBonus</td>
                                 <td>@Item.GrossAmount</td>
                                 <td>@Item.TDSAmount</td>
                                 <td>@Item.ProcessingFee</td>
