--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/Direct.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/Direct.cshtml
@@ -38,7 +38,8 @@
                                                     <div class="col-md-3">
                                                         LoginId
                                                         @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id", @required = "required" })
-                                                    </div>
+                                                        @Html.HiddenFor(m => m.ToLoginID)
+                                                     </div>
                                                     <div class="col-md-3">
                                                         From Date
                                                         @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Joining Date" })
@@ -65,7 +66,7 @@
                                                     </div>
                                                     <div class="col-md-3">
                                                         <br />
-                                                        <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" />
+                                                        <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" onclick="return validateLogin();"  />
                                                     </div>
 
                                                 </div>
@@ -147,12 +148,76 @@
 
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+
+<script src="../../WebsiteCss/js/jquery.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 <script>
+
+    $(document).ready(function () {
+        $("input").attr("autocomplete", "off");
+
+        var cityuse = [];
+        $("#loader").css({ 'display': '' });
+        $.ajax({
+            url: '/AdminReports/GetUserList',
+            type: 'Post',
+            success: function (response) {
+                if (response != null) {
+
+
+                    $(response).each(function (index, item) {
+                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                    });
+
+                    $('#LoginId').autocomplete({
+                        source: cityuse,
+                        select: function (event, ui) {
+                            var str = ui.item.label;
+                            var strsplit = str.split("(");
+
+                            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                        }
+                    })
+                }
+            }, error: function () {
+                alert('Some Thing wrong!');
+                $("#loader").css({ 'display': 'none' });
+            }
+        });
+    });
+
+    function validateLogin() {
+        var login = $('#LoginId').val();
+        if (login == "") {
+            $('#ToLoginID').val(null);
+        } else {
+            var loginid = $('#ToLoginID').val();
+
+        }
+    }
 
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true
     });
     $('#ToDate').datepicker({
         dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true
     });
+
+    $('#FromActivationDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true
+    });
+    $('#ToActivationDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true
+    });
+
+
 </script>
