--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/ProductPayoutDetails.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/ProductPayoutDetails.cshtml
@@ -82,7 +82,7 @@
                                         <th>Closing Date</th>
                                         <th>Direct Income</th>
                                         <th>Harmony </th>
-                                        <th>Direct Leadership Bonus</th>
+                                        <th hidden="hidden">Direct Leadership Bonus</th>
                                         <th>Gross Amount</th>
                                         <th>TDS Amount</th>
                                         <th>Processing Fee</th>
@@ -107,7 +107,7 @@
                                                     <td>@Item.ClosingDate</td>
                                                     <td>@Item.DirectIncome</td>
                                                     <td>@Item.BinaryIncome</td>
-                                                    <td>@Item.LeadershipBonus</td>
+                                                    <td hidden="hidden">@Item.LeadershipBonus</td>
                                                     <td>@Item.GrossAmount</td>
                                                     <td>@Item.TDSAmount</td>
                                                     <td>@Item.ProcessingFee</td>
