--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/ProductPayoutReceipt.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/ProductPayoutReceipt.cshtml
@@ -73,7 +73,7 @@
                         <td>Harmony Income</td>
                         <td>@Model.BinaryIncome</td>
                     </tr>
-                    <tr>
+                    <tr hidden="hidden">
                         <td>3</td>
                         <td>Direct Leadership Bonus</td>
                         <td>@Model.LeadershipBonus</td>
