--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -37,6 +37,8 @@
     <!-- BEGIN: Custom CSS-->
     <link rel="stylesheet" type="text/css" href="../../../assets/css/style.css">
     <link href="../../AdminPanelCss/Datatablecss/css/amchart/export.css" rel="stylesheet" />
+
+    <link href="../../Autofill/jquery-ui.css" rel="stylesheet" />
     <!-- END: Custom CSS-->
     <style>
         .dataTables_wrapper {
@@ -293,6 +295,7 @@
     <script src="../../AssociatePanelcss/app-assets/js/scripts/components.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/scripts/customizer.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/scripts/footer.min.js"></script>
+
     <!-- END: Theme JS-->
     <!-- BEGIN: Page JS-->
     <script src="../../AssociatePanelcss/app-assets/js/scripts/pages/dashboard-analytics.min.js"></script>
@@ -307,6 +310,9 @@
     <script src="./../Datatablecss/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.html5.min.js"></script>
     <script src="./../Datatablecss/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.print.min.js"></script>
     <script src="./../Datatablecss/datatables/datatables-init.js"></script>
+
+    <script src="../../Autofill/jquery-2.1.3.js"></script>
+    <script src="../../Autofill/jquery-ui.js"></script>
     <!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
     <script>
         jQuery(document).ready(function () {
