--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/DistributePayment.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/DistributePayment.cshtml
@@ -73,7 +73,7 @@
                                                                 <th>Name</th>
                                                                 <th>Binary Income </th>
                                                                 <th>Direct Income</th>
-                                                                <th>Direct Leadership Bonus</th>
+                                                                <th hidden="hidden">Direct Leadership Bonus</th>
                                                                 <th>Gross Amount</th>
                                                                 <th>TDS Amount</th>
                                                                 <th>Processing</th>
@@ -95,7 +95,7 @@
                                                                             <td>@Item.FirstName</td>
                                                                             <td>@Item.BinaryIncome</td>
                                                                             <td>@Item.DirectIncome</td>
-                                                                            <td>@Item.LeadershipBonus</td>
+                                                                            <td hidden="hidden">@Item.LeadershipBonus</td>
                                                                             <td>@Item.GrossIncome</td>
                                                                             <td>@Item.TDS</td>
                                                                             <td>@Item.Processing</td>
