--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
@@ -503,7 +503,8 @@
 
                                                         <div class="col-md-4">
                                                             <input name="txtLoginID" type="text" maxlength="10" id="txtLoginID" class="form-control" placeholder="Search By Login ID" autocomplete="off">
-                                                        </div>
+                                                            <input type="hidden" id="ToLoginID">
+                                                         </div>
                                                         <div class="col-md-4">
                                                             <input type="hidden" name="hfCustomerId" id="hfCustomerId">
                                                             <input type="hidden" name="HiddenField1" id="HiddenField1">
@@ -737,7 +738,14 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+<script src="../../WebsiteCss/js/jquery.js"></script>
 <script type="text/javascript">
+
+
+   
+
     var winHeight = $(window).height();
     var winWidth = $(window).width();
 
@@ -920,6 +928,39 @@
 </script>
 
 <script type="text/javascript">
+
+     $(document).ready(function () {
+        $("input").attr("autocomplete", "off");
+
+        var cityuse = [];
+        $("#loader").css({ 'display': '' });
+        $.ajax({
+            url: '/User/GetUserList',
+            type: 'Post',
+            success: function (response) {
+                if (response != null) {
+
+
+                    $(response).each(function (index, item) {
+                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                    });
+
+                    $('#txtLoginID').autocomplete({
+                        source: cityuse,
+                        select: function (event, ui) {
+                            var str = ui.item.label;
+                            var strsplit = str.split("(");
+
+                            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                        }
+                    })
+                }
+            }, error: function () {
+                alert('Some Thing wrong!');
+                $("#loader").css({ 'display': 'none' });
+            }
+        });
+    });
 
     var winHeight = $(window).height();
     var winWidth = $(window).width();
@@ -1429,6 +1470,15 @@
 
     $(function () {
         $("#btnSearch").click(function () {
+
+            var txtLoginID = $('#txtLoginID').val();
+            if (txtLoginID == "") {
+                $('#ToLoginID').val(null);
+            } else {
+                var txtLoginID = $('#ToLoginID').val();
+                $('#txtLoginID').val(txtLoginID);
+            }
+
             if ($("#txtLoginID").val() != "") {
                 $.ajax({
                     url: '../../../Models/WebService/AgentServices.asmx/SearchCustomersByLoginId2',
