changes Autofill changes in associates

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/GetDailyIncome.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/GetDailyIncome.cshtml
@@ -71,7 +71,7 @@
                                             <th>Login ID</th>
                                             <th>Name</th>
                                             <th>Direct</th>
-                                            <th>Harmony</th>
+                                            <th>Binary</th>
                                             <th>Direct Leadership Bonus</th>
                                             <th>Gross</th>
 
