--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/PayoutDetail.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/PayoutDetail.cshtml
@@ -85,7 +85,7 @@
                                                             <th>Gross Amount</th>
                                                             <th>TDS Amount</th>
                                                             <th>Processing Fee</th>
-                                                            <th>Product Wallet</th>
+                                                            <th hidden="hidden">Product Wallet</th>
                                                             <th>Net Payable Amount</th>
                                                             <th hidden="hidden">Action</th>
                                                         </tr>
@@ -110,7 +110,7 @@
                                                             <td>@Item.GrossAmount</td>
                                                             <td>@Item.TDSAmount</td>
                                                             <td>@Item.ProcessingFee</td>
-                                                            <td>@Item.ProductWallet</td>
+                                                            <td hidden="hidden">@Item.ProductWallet</td>
                                                             <td>@Item.NetAmount</td>
                                                             <td hidden="hidden">
                                                                 <a href="/AdminReports/PayoutReceipt?lid=@Item.EncryptName&pno=@Item.EncryptPayoutNo" class="btn btn-sm btn-primary" target="_blank">Print</a>
