--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/ProductDistributePayment.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/ProductDistributePayment.cshtml
@@ -73,7 +73,7 @@
                                             <th>Sr No.</th>
                                             <th>LoginID</th>
                                             <th>Name</th>
-                                            <th>Harmony </th>
+                                            <th>Binary </th>
                                             <th>Direct Income</th>
                                             <th hidden="hidden">Direct Leadership Bonus</th>
                                             <th>Gross Amount</th>
