--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReceipt.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReceipt.cshtml
@@ -107,7 +107,7 @@
                         <td>Processing Fee (5%)</td>
                         <td>@Model.ProcessingFee</td>
                     </tr>
-                    <tr>
+                    <tr hidden="hidden">
                         <td>3</td>
                         <td>Product Wallet (5%)</td>
                         <td>@Model.ProductWallet</td>
