--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/PayoutReceipt.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/PayoutReceipt.cshtml
@@ -70,7 +70,7 @@
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>Harmony Income</td>
+                        <td>Binary Income</td>
                         <td>@Model.BinaryIncome</td>
                     </tr>
                     <tr hidden="hidden">
@@ -107,7 +107,7 @@
                         <td>Processing Fee (5%)</td>
                         <td>@Model.ProcessingFee</td>
                     </tr>
-                    <tr>
+                    <tr hidden="hidden">
                         <td>3</td>
                         <td>Product Wallet (5%)</td>
                         <td>@Model.ProductWallet</td>
