--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -33,7 +33,9 @@
     <link rel="stylesheet" type="text/css" href="../../AssociatePanelcss/app-assets/css/plugins/tour/tour.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <!-- END: Page CSS-->
+
+    <link href="../../Autofill/jquery-ui.css" rel="stylesheet" />
+     <!-- END: Page CSS-->
     <!-- BEGIN: Custom CSS-->
     <link rel="stylesheet" type="text/css" href="../../../assets/css/style.css">
     <link href="../../AdminPanelCss/Datatablecss/css/amchart/export.css" rel="stylesheet" />
@@ -360,6 +362,8 @@
     <script src="../../AssociatePanelcss/app-assets/js/scripts/pages/dashboard-analytics.min.js"></script>
     <!-- END: Page JS-->
 
+    <script src="../../Autofill/jquery-2.1.3.js"></script>
+    <script src="../../Autofill/jquery-ui.js"></script>
     <script src="./../Datatablecss/datatables/datatables.min.js"></script>
     <script src="./../Datatablecss/datatables/cdn.datatables.net/buttons/1.2.2/js/dataTables.buttons.min.js"></script>
     <script src="./../Datatablecss/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.flash.min.js"></script>
