--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -311,7 +311,7 @@
     <script src="./../Datatablecss/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.print.min.js"></script>
     <script src="./../Datatablecss/datatables/datatables-init.js"></script>
 
-    <script src="../../Autofill/jquery-2.1.3.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
     <script src="../../Autofill/jquery-ui.js"></script>
     <!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
     <script>
