--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
 
     <link href="../../Autofill/jquery-ui.css" rel="stylesheet" />
      <!-- END: Page CSS-->
+
     <!-- BEGIN: Custom CSS-->
     <link rel="stylesheet" type="text/css" href="../../../assets/css/style.css">
     <link href="../../AdminPanelCss/Datatablecss/css/amchart/export.css" rel="stylesheet" />
@@ -362,8 +363,6 @@
     <script src="../../AssociatePanelcss/app-assets/js/scripts/pages/dashboard-analytics.min.js"></script>
     <!-- END: Page JS-->
 
-    <script src="../../Autofill/jquery-2.1.3.js"></script>
-    <script src="../../Autofill/jquery-ui.js"></script>
     <script src="./../Datatablecss/datatables/datatables.min.js"></script>
     <script src="./../Datatablecss/datatables/cdn.datatables.net/buttons/1.2.2/js/dataTables.buttons.min.js"></script>
     <script src="./../Datatablecss/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.flash.min.js"></script>
@@ -373,6 +372,8 @@
     <script src="./../Datatablecss/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.html5.min.js"></script>
     <script src="./../Datatablecss/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.print.min.js"></script>
     <script src="./../Datatablecss/datatables/datatables-init.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
+    <script src="../../Autofill/jquery-ui.js"></script>
     <!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
     <script>
         jQuery(document).ready(function () {
