--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -188,7 +188,54 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="card-title">Notification</h4>
+                        </div>
+                        <div class="card-content">
+
+                            <div class="table-responsive">
+                                <table class="table mb-0" id="example23">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>Sr No.</th>
+                                            <th>Title</th>
+                                            <th>News</th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @if (Model != null)
+                                        {
+                                            if (Model.NoticeMasterlist != null)
+                                            {
+                                                int i = 1;
+                                                foreach (var Item in Model.NoticeMasterlist)
+                                                {
+                                                    <tr class="text-left">
+                                                        <td>@i</td>
+                                                        <td>@Item.Title</td>
+                                                        <td>@Item.News</td>
+
+
+                                                    </tr>
+                                                    i++;
+                                                }
+
+                                            }
+                                        }
+
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               
                 
+            </div>
+            <div class="row" >
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="card">
                         <div class="card-header">
@@ -231,10 +278,8 @@
                         </div>
                     </div>
                 </div>
-                
-            </div>
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12">
+
+                <div class="col-lg-6 col-md-6 col-sm-12" hidden="hidden">
                     <div class="card">
                         <div class="card-header">
                             <h4 class="card-title">Current Month Business Details</h4>
